AI Assistant: Fix toolbar action menu position on mobile (#30920)
* fix toolbar menu position

* changelog

--- a/projects/plugins/jetpack/extensions/blocks/ai-assistant/editor.scss
+++ b/projects/plugins/jetpack/extensions/blocks/ai-assistant/editor.scss
@@ -4,6 +4,10 @@
  * Editor styles for Jetpack AI Assistant
  */
 
+.block-editor-block-toolbar__slot {
+	flex-shrink: 0;
+}
+
 .wp-block-ai-generate-suggestion {
 	padding: 0;
 }
